network-policy-test/networkpolicy-test1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  namespace: default
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-app
    image: nginx
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80

---
    
    apiVersion: v1
    kind: Pod
    metadata:
      name: busybox
      namespace: ns1
      labels:
        app: busybox-ns1
    spec:
      containers:
      - name: busybox
        image: busybox
        args: ["sh", "-c", "sleep 3600"]
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
