network-policy-test/networkpolicy-test2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-from-other-namespace
  namespace: default
spec:
  podSelector: 
    matchLabels: {}
  ingress:
   - from:
       - podSelector:
           {}
